[package]
name = "crab-cryptor"
version = "4.1.0"
edition = "2024"
authors = ["xl_g <lr_kkr@outlook.com>"]
description = "A simple file cryptor"
repository = "https://github.com/lrkkr/crab-cryptor"
readme = "README.md"
keywords = ["cli", "encrypt", "decrypt"]
categories = ["cryptography", "command-line-utilities", "filesystem"]
license = "MIT"

[lib]
name = "crab_cryptor"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
flate2 = { version = "1.1.9", features = ["zlib"] }
indicatif = "0.17.11"
inquire = "0.7.5"
os_str_bytes = "7.1.1"
rand = "0.9.2"
rayon = "1.11.0"
tar = "0.4"
walkdir = "2.5.0"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "crab"
path = "src/main.rs"
