[package]
name = "crab-cryptor"
version = "4.2.0"
edition = "2024"
authors = ["xl_g <lr_kkr@outlook.com>"]
description = "A simple file cryptor"
repository = "https://github.com/lrkkr/crab-cryptor"
readme = "README.md"
keywords = ["cli", "encrypt", "decrypt"]
categories = ["cryptography", "command-line-utilities", "filesystem"]
license = "MIT"

[lib]
name = "crab_cryptor"
path = "src/lib.rs"

[dependencies]
aead-stream = "0.6.0"
anyhow = "1.0.103"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
blake3 = "1.8.5"
chacha20poly1305 = { version = "0.11.0" }
flate2 = { version = "1.1.9", features = ["zlib"] }
indicatif = "0.18.6"
inquire = "0.9.4"
os_str_bytes = "7.2.0"
rand = "0.10.2"
rayon = "1.12.0"
tar = "0.4"
walkdir = "2.5.0"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "crab"
path = "src/main.rs"

[lints.rust]
dead_code = "deny"
unused_variables = "deny"
unused_mut = "deny"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
indexing_slicing = "deny"
clone_on_ref_ptr = "deny"
